# sistema-multiagente-anemia-IA

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  COMANDOS_EJECUCION.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  PLAN_CORRECCIONES_Y_MEJORAS.md  PLAN_MEJORAS.md  README.md  alembic.ini  docker-compose.yml  ecosystem.config.cjs  pyproject.toml  pytest.ini  railway.frontend.json  requirements.txt
agents/: __init__.py  base.py  data_agent.py  explainability_agent.py  monitoring_agent.py  orchestrator_agent.py  prediction_agent.py  preprocessing_agent.py  recommendation_agent.py
agents/llm/: __init__.py  gemini_client.py
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: routes_agents.py  routes_chat.py  routes_dashboard.py  routes_explainability.py  routes_health.py  routes_prediction.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  db_models.py
backend/app/schemas/: __init__.py  agent_schema.py  dashboard_schema.py  explanation_schema.py  prediction_schema.py
backend/app/services/: chat_service.py  dashboard_service.py  database_service.py  explainability_service.py  model_loader.py  pipeline_service.py  prediction_service.py
backend/app/utils/: logger.py  preprocessing.py
backend/tests/: test_api.py  test_clinical.py
data/: dataset.csv  dataset2024.csv
data/sample/: sample_200.csv
database/: init.sql  schema.sql  seed.sql
database/migrations/: .gitkeep  env.py
docs/: agents.md  api.md  architecture.md  database.md  docker.md  frontend.md  models.md  setup.md
explainability/: __init__.py  explanation_utils.py  lime_explainer.py  shap_explainer.py
frontend/: nginx.conf  nginx.conf.template  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/public/static/: app.js
frontend/src/: App.tsx  CaseContext.tsx  global.d.ts  index.tsx  pageTransition.ts
frontend/src/components/: AgentFlow.tsx  AgentStatusCard.tsx  AnimatedCard.tsx  BottomNav.tsx  DashboardCard.tsx  ErrorMessage.tsx  Header.tsx  LimePanel.tsx  LoadingAnimation.tsx  MobileLayout.tsx  ModelSelector.tsx  PredictionForm.tsx  PredictionResultCard.tsx  ShapChart.tsx
frontend/src/data/: puno.ts
frontend/src/hooks/: useAgents.ts  useCaseStats.ts  useChat.ts  useClinicalPdf.ts  useConversations.ts  useDashboard.ts  useExampleCase.ts  useExplainability.ts  useMediaQuery.ts  usePersistentState.ts  usePrediction.ts  useTypewriter.ts
frontend/src/lib/: conversation.ts  db.ts  pdf.ts  (+2 more)
ml/: __init__.py  _bootstrap.py  compare_models.py  etl_clean_dataset.py  evaluate_models.py  inference.py  preprocessing_pipeline.py  train_random_forest.py  train_xgboost.py  training_utils.py
ml/saved_models/: comparison.json  random_forest_metrics.json  xgboost_metrics.json
notebooks/: 01_eda.ipynb  02_training_random_forest.ipynb  03_training_xgboost.ipynb  04_shap_lime_explainability.ipynb  05_demo_pipeline.ipynb
public/static/: app.js  styles.css
src/: index.tsx
(+58 files in other folders)
